--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   "license": "ISC",
   "dependencies": {
     "fastify": "^3.0.0",
-    "fastify-plugin": "^3.0.0",
     "fastify-autoload": "^3.3.1",
+    "fastify-cli": "^2.13.0",
+    "fastify-plugin": "^3.0.0",
     "fastify-sensible": "^3.1.0",
-    "fastify-cli": "^2.13.0"
+    "isemail": "^3.2.0"
   },
   "devDependencies": {
     "tap": "^15.0.9"
