--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fastify-cli": "^2.13.0",
     "fastify-plugin": "^3.0.0",
     "fastify-sensible": "^3.1.0",
+    "fastify-static": "^4.4.2",
     "isemail": "^3.2.0",
     "isomorphic-fetch": "^3.0.0"
   },
